Update Calc.java